# ml-test-vectors

./: .eslintignore  .gitignore  .pylintrc  README.md  TODO.md  jest.config.json  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements.colab.txt  requirements.dev.txt  requirements.txt  tsconfig.json
ml_test_vectors/: __init__.py  __main__.py  core.py  core.ts  parser.py  runner.py  setupJest.ts  types.py  types.ts  utils.py  utils.ts
ml_test_vectors/stateful/linear/: __init__.py  data.py  implementation.py
ml_test_vectors/stateless/: __init__.py  default_data.py  generate.py  test.py  testutils.py  testutils.ts
ml_test_vectors/stateless/flatten/: __init__.py  data.py  implementation.py  implementation.ts  test_flatten.py  test_flatten.test.ts  test_vector.json
ml_test_vectors/stateless/sigmoid/: __init__.py  data.py  implementation.py  implementation.ts  test_sigmoid.py  test_sigmoid.test.ts  test_vector.json
ml_test_vectors/stateless/sum/: __init__.py  data.py  implementation.py  implementation.ts  test_sum.py  test_sum.test.ts  test_vector.json
ml_test_vectors/stateless/tanh/: __init__.py  data.py  implementation.py  implementation.ts  test_tanh.py  test_tanh.test.ts  test_vector.json
notebooks/: Hello World.ipynb
