[tool.poetry]
authors = ["willclarktech <willclarktech@users.noreply.github.com>"]
description = "Test vectors for ML functions"
name = "ml_test_vectors"
packages = [{include = "ml_test_vectors"}]
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.10.9"
torch = "^1.13.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
jupyter = "^1.0.0"
mypy = "^0.991"
pylint = "^2.15.9"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
